Adiciona conteúdo da Área Educativa e página Direitos dos Catadores

--- a/area-educativa.html
+++ b/area-educativa.html
@@ -26,17 +26,21 @@
         </section>
 
         <section class="sla">
-            <a href="separacao.html"><article class="conteudo">
-                <img src="assets/video-player.png" alt="Vídeo educativo" width="300px">
-                <h3>Como separar o lixo corretamente</h3>
-                <p>Aprenda as práticas essenciais para a separação de resíduos</p>
-            </article></a>
+            <a href="separacao.html" target="_blank">
+                <article class="conteudo">
+                    <img src="assets/video-player.png" alt="Vídeo educativo" width="300px">
+                    <h3>Como separar o lixo corretamente</h3>
+                    <p>Aprenda as práticas essenciais para a separação de resíduos</p>
+                </article>
+            </a>
 
-            <article class="conteudo">
-                <img src="assets/escudo.png" alt="Direitos dos catadores" width="300px">
-                <h3>Direito dos catadores</h3>
-                <p>Informações sobre direitos trabalhistas e práticas de segurança</p>
-            </article>
+            <a href="direito-catadores.html" target="_blank">
+                <article class="conteudo">
+                    <img src="assets/escudo.png" alt="Direitos dos catadores" width="300px">
+                    <h3>Direito dos catadores</h3>
+                    <p>Informações sobre direitos trabalhistas e práticas de segurança</p>
+                </article>
+            </a>
         </section>
 
         <section class="sla">
@@ -64,7 +68,7 @@
     </main>
 
     <footer>
-        <p>&copy; Site acadêmico desenvolvido por alunas do Instituto da Oportunidade Social – Projeto TCC.</p>
+        <p>&copy; Site acadêmico desenvolvido por alunos do Instituto da Oportunidade Social – Projeto TCC.</p>
     </footer>
 </body>
 
