--- a/separacao.html
+++ b/separacao.html
@@ -17,22 +17,15 @@
     <nav>
 
         <h1>Cataki</h1>
-        <a href="area-educativa.html">Área Educativa</a>
+        <a href="area-educativa.html" target="_blank">Área Educativa</a>
         <a href="">Entrar</a>
     </nav>
     <main>
         <section id="inicio">
             <div id="textos-inicio">
                 <h2>Como separar o lixo corretamente</h2>
-                <p>Com o aumento da conscientização ambiental, separar o lixo corretamente em sua casa se tornou mais do
-                    que
-                    uma tendência: é uma atitude essencial. Quando você separa materiais recicláveis do lixo orgânico,
-                    está
-                    contribuindo diretamente para a redução da poluição, a economia de recursos naturais e a diminuição
-                    do
-                    volume de resíduos em aterros sanitários. É um gesto simples que faz uma grande diferença para o
-                    planeta
-                    e para as futuras gerações. </p>
+                <p>Separar o lixo ajuda a reduzir a poluição, economiza recursos naturais e diminui o descarte em
+                    aterros. É um gesto simples com grande impacto ambiental.</p>
             </div>
             <img src="assets/simbolo-de-reciclagem.png" alt="" width="300px">
         </section>
@@ -40,82 +33,64 @@
             <article class="lixo">
                 <img src="assets/azul.png" alt="" width="300px">
                 <h3>Lixeira Azul</h3>
-                <p>A lixeira azul é utilizada para armazenar papéis e papelões na coleta seletiva. Nela, devem ser
-                    descartados jornais, revistas, embalagens de papelão, caixas e outros materiais similares.
-                </p>
                 <ul>
-                    <li>Papel: Jornais, revistas, embalagens de papel, cadernos, papéis de embalagem, etc.</li>
-                    <li>Papelão: Caixas de papelão, embalagens de papelão, etc.</li>
+                    <li>Descartar: jornais, revistas, cadernos, embalagens e caixas de papel/papelão.</li>
                 </ul>
             </article>
             <article class="lixo">
                 <img src="assets/vermelha.png" alt="" width="300px">
                 <h3>Lixeira Vermelha</h3>
-                <p>
-                    A lixeira vermelha é destinada a resíduos plásticos. O ideal é que os materiais estejam limpos e
-                    secos antes do descarte para facilitar a reciclagem.
-                </p>
                 <ul>
-                    <li>Plásticos: Garrafas PET, potes de shampoo, sacolas plásticas, tampas, brinquedos.</li>
-                    <li>Embalagens: Copos descartáveis, embalagens de alimentos, tubos de pasta de dente (limpos).</li>
+                    <li>Descartar: garrafas PET, potes de shampoo, sacolas, brinquedos e embalagens plásticas (limpas).
+                    </li>
                 </ul>
-
             </article>
             <article class="lixo">
                 <img src="assets/verde.png" alt="" width="300px">
                 <h3>Lixeira Verde</h3>
-                <p>
-                    A lixeira verde é utilizada para descarte de materiais de vidro. É importante que os itens estejam
-                    limpos e, se possível, sem tampa.
-                </p>
                 <ul>
-                    <li>Vidros: Garrafas, potes, frascos, copos de vidro.</li>
-                    <li>Importante: Não misturar com espelhos, cerâmicas ou vidros quebrados.</li>
+                    <li>Descartar: garrafas, potes, copos de vidro (sem tampa).</li>
+                    <li>⚠️ Evite: espelhos, cerâmica, vidro quebrado.</li>
                 </ul>
-
             </article>
             <article class="lixo">
                 <img src="assets/marrom.png" alt="" width="300px">
                 <h3>Lixeira Marrom</h3>
-                <p>
-                    A lixeira marrom é destinada aos resíduos orgânicos, ou seja, restos de origem biológica que podem
-                    ser decompostos naturalmente. Esses materiais são ideais para compostagem.
-                </p>
                 <ul>
-                    <li>Restos de alimentos: Cascas de frutas, verduras, legumes, sobras de comida.</li>
-                    <li>Resíduos naturais: Borra de café, saquinhos de chá, folhas secas, pequenos galhos.</li>
+                    <li>Descartar: restos de comida, cascas, folhas, borra de café, chá, galhos.</li>
+                    <li>Ideal para compostagem.</li>
                 </ul>
 
             </article>
         </section>
         <section id="dica-video">
-            <article id="dica-texto">
-            <h3>Dicas Úteis</h3>
-            <ul>
-                <li>Lave potes e embalagens antes de descartar — resíduos de comida contaminam a reciclagem.</li>
-                <li>Evite amassar papéis e papelões — isso dificulta o reaproveitamento.</li>
-                <li>Separe os resíduos por tipo: papel, plástico, metal, vidro e orgânicos.</li>
-                <li>Não misture lixo reciclável com orgânico.</li>
-                <li>Retire tampas de garrafas e potes antes do descarte.</li>
-                <li>Use caixas, sacolas ou sacos específicos para cada material reciclável.</li>
-            </ul>
-            <h3>O que NÃO pode ser reciclado?</h3>
-            <ul>
-                <li>Espelhos, vidros temperados, cerâmicas e porcelanas.</li>
-                <li>Fraldas, absorventes, papel higiênico usado.</li>
-                <li>Papel plastificado, papel carbono ou papel com gordura.</li>
-                <li>Embalagens com restos de alimentos ou contaminadas com óleo.</li>
-                <li>Esponjas de cozinha e itens de uso pessoal contaminado.</li>
-                <li>Lâmpadas, pilhas, baterias e eletrônicos (devem ser descartados em locais específicos).</li>
-            </ul>
+            <article class="dica-texto">
+                <h3>Dicas Úteis</h3>
+                <ul>
+                    <li>Lave os recicláveis.</li>
+                    <li>Não amasse papel e papelão.</li>
+                    <li>Separe corretamente por tipo.</li>
+                    <li>Nunca misture reciclável com lixo comum.</li>
+                    <li>Retire tampas antes do descarte.</li>
+                </ul>
+                <hr>
+                <h3>O que NÃO pode ser reciclado?</h3>
+                <ul>
+                    <li>Vidros especiais (espelhos, temperado), cerâmica.</li>
+                    <li>Fraldas, absorventes, papel higiênico usado.</li>
+                    <li>Papéis sujos, engordurados ou plastificados.</li>
+                    <li>Esponjas, resíduos contaminados.</li>
+                    <li>Lâmpadas, pilhas, baterias e eletrônicos (devem ser descartados em locais específicos).</li>
+                </ul>
             </article>
-            <article id="dica-video">
-                <video src="assets/Separação do lixo.mp4" controls poster="assets/simbolo-de-reciclagem.png" width="450px"></video>
+            <article class="video">
+                <video src="assets/Separação do lixo.mp4" controls poster="assets/simbolo-de-reciclagem.png"
+                    width="450px"></video>
             </article>
         </section>
     </main>
     <footer>
-
+        <p>&copy; Site acadêmico desenvolvido por alunos do Instituto da Oportunidade Social – Projeto TCC.</p>
     </footer>
 </body>
 
