Subindo site educativo para o repositório

--- a/direito-catadores.html
+++ b/direito-catadores.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Direitos dos Catadores</title>
-    <link rel="stylesheet" href="catadores.css">
+    <link rel="stylesheet" href="css/catadores.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -14,14 +14,19 @@
 </head>
 
 <body>
-    <nav>
-        <h1>Cataki</h1>
-        <a href="area-educativa.html" target="_blank">Área Educativa</a>
-        <a href="">Entrar</a>
-    </nav>
+    <header>
+        <nav>
+            <h1>Cataki</h1>
+            <a href="index.html">Área Educativa</a>
+        </nav>
+    </header>
     <main>
-        <h2>Direitos dos Catadores</h2>
-        <p> Os catadores são agentes ambientais fundamentais. Lutam por dignidade, inclusão e reconhecimento.</p>
+        <section id="first">
+            <h2>Direitos dos Catadores</h2>
+            <p> Os catadores são agentes ambientais fundamentais. <br>Lutam por dignidade, inclusão e
+                reconhecimento.
+            </p>
+        </section>
         <section class="conjunto">
             <article class="card">
                 <h3>+1 MILHÃO</h3>
@@ -42,9 +47,46 @@
                 <p>sem acesso à previdência</p>
             </article>
         </section>
+        <section id="infos">
+            <article class="direitos">
+                <div class="dt">
+                    <img src="assets/escudo (1).png" alt="Simbolo de um escudo" width="150px" height="150px">
+                    <h4>Direitos garantidos <br> por lei</h4>
+                </div>
+                <ul>
+                    <li>Reconhecimento profissional</li>
+                    <li>Condições dignas</li>
+                    <li>Acesso à saude e programas sociais</li>
+                    <li>Direito à organização</li>
+                </ul>
+            </article>
+            <article class="direitos">
+                <div class="dt">
+                    <img src="assets/catador.png" alt="Imagem de um catador" width="150px" height="150px">
+                    <h4>Como a sociedade pode contribuir?</h4>
+                </div>
+                <ul>
+                    <li>Respeito</li>
+                    <li>Separação correta do lixo</li>
+                    <li>Apoio a cooperativas locais</li>
+                </ul>
+            </article>
+        </section>
+        <section id="video-direitos">
+            <video controls width="800px">
+                <source src="assets/Direito dos Catadores.mp4" type="video/mp4">
+                Seu navegador não suporta vídeo HTML5.
+            </video>
+            <div class="dt2">
+                <h4>A importância dos catadores</h4>
+                <p>Este vídeo apresenta o papel dos catadores na reciclagem, os desafios enfrentados por eles e
+                    a
+                    importância de garantir seus direitos. Ideal para refletir e educar.</p>
+            </div>
+        </section>
     </main>
     <footer>
-
+        <p>&copy; Site acadêmico desenvolvido por alunos do Instituto da Oportunidade Social – Projeto TCC.</p>
     </footer>
 </body>
 
