--- a/separacao.html
+++ b/separacao.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Separação</title>
-    <link rel="stylesheet" href="separacao.css">
+    <link rel="stylesheet" href="css/separacao.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -14,12 +14,12 @@
 </head>
 
 <body>
-    <nav>
-
-        <h1>Cataki</h1>
-        <a href="area-educativa.html" target="_blank">Área Educativa</a>
-        <a href="">Entrar</a>
-    </nav>
+    <header>
+        <nav>
+            <h1>Cataki</h1>
+            <a href="index.html">Área Educativa</a>
+        </nav>
+    </header>
     <main>
         <section id="inicio">
             <div id="textos-inicio">
