Estilização area educativa

--- a/direito-catadores.html
+++ b/direito-catadores.html
@@ -86,7 +86,19 @@
         </section>
     </main>
     <footer>
-        <p>&copy; Site acadêmico desenvolvido por alunos do Instituto da Oportunidade Social – Projeto TCC.</p>
+        <section id="izy">
+            <article>
+                <h3>Onde estamos?</h3>
+                <p>R. Gustav Willi Borghoff, 378 - Parque Industrial Tomas Edson, São Paulo - SP, 01144-080</p>
+            </article>
+            <article>
+                <h3>Contato</h3>
+                <p>CATAKI@PIMPMYCARROCA.COM</p>
+            </article>
+            <article>Redes Sociais</article>
+
+        </section>
+        <p>&copy; Cataki - Todos os direitos reservados</p>
     </footer>
 </body>
 
