--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
         </nav>
     </header>
     <main>
-        <section>
-            <h2>Área Educativa</h2>
+        <section id="titulo">
+            <h2>Área Educativa | Cataki</h2>
             <p>Eduque-se sobre a importância da reciclagem, a valorização dos catadores e seus direitos.</p>
         </section>
 
         <section class="sla">
             <a href="separacao.html" target="_blank">
                 <article class="conteudo">
-                    <img src="assets/video-player.png" alt="Vídeo educativo" width="300px">
+                    <img src="assets/video-player.png" alt="Vídeo educativo" width="250px">
                     <h3>Como separar o lixo corretamente</h3>
                     <p>Aprenda as práticas essenciais para a separação de resíduos</p>
                 </article>
@@ -37,7 +37,7 @@
 
             <a href="direito-catadores.html" target="_blank">
                 <article class="conteudo">
-                    <img src="assets/escudo.png" alt="Direitos dos catadores" width="300px">
+                    <img src="assets/escudo.png" alt="Direitos dos catadores" width="250px">
                     <h3>Direito dos catadores</h3>
                     <p>Informações sobre direitos trabalhistas e práticas de segurança</p>
                 </article>
@@ -47,14 +47,14 @@
         <section class="sla">
             <a href="remuneracao.html" target="_blank">
                 <article class="conteudo">
-                    <img src="assets/dinheiro.png" alt="Remuneração" width="300px">
+                    <img src="assets/dinheiro.png" alt="Remuneração" width="250px">
                     <h3>Por que remunerar os catadores é essencial</h3>
                     <p>Entenda o impacto do pagamento justo para estes profissionais</p>
                 </article>
             </a>
             <a href="escolas.html">
                 <article class="conteudo">
-                    <img src="assets/aluno.png" alt="Educação nas escolas" width="300px">
+                    <img src="assets/aluno.png" alt="Educação nas escolas" width="250px">
                     <h3>Cataki nas escolas</h3>
                     <p>Materiais para promover a consciência ambiental entre os jovens</p>
                 </article>
@@ -62,7 +62,7 @@
         </section>
 
         <section id="quiz">
-            <img src="assets/lista-de-controle.png" alt="Quiz" width="300px">
+            <img src="assets/perguntas-frequentes.png" alt="Quiz" width="80px">
             <div>
                 <h3>Quiz e certificação</h3>
                 <p>Teste seus conhecimentos e receba um certificado</p>
@@ -72,7 +72,19 @@
     </main>
 
     <footer>
-        <p>&copy; Site acadêmico desenvolvido por alunos do Instituto da Oportunidade Social – Projeto TCC.</p>
+        <section id="izy">
+            <article>
+                <h3>Onde estamos?</h3>
+                <p>R. Gustav Willi Borghoff, 378 - Parque Industrial Tomas Edson, São Paulo - SP, 01144-080</p>
+            </article>
+            <article>
+                <h3>Contato</h3>
+                <p>CATAKI@PIMPMYCARROCA.COM</p>
+            </article>
+            <article>Redes Sociais</article>
+            
+        </section>
+        <p>&copy; Cataki - Todos os direitos reservados</p>
     </footer>
 </body>
 
