--- a/separacao.html
+++ b/separacao.html
@@ -74,7 +74,7 @@
                     <li>Retire tampas antes do descarte.</li>
                 </ul>
                 <hr>
-                <h3>O que NÃO pode ser reciclado?</h3>
+                <h3>O que <span>NÃO</span> pode ser reciclado?</h3>
                 <ul>
                     <li>Vidros especiais (espelhos, temperado), cerâmica.</li>
                     <li>Fraldas, absorventes, papel higiênico usado.</li>
@@ -90,7 +90,19 @@
         </section>
     </main>
     <footer>
-        <p>&copy; Site acadêmico desenvolvido por alunos do Instituto da Oportunidade Social – Projeto TCC.</p>
+        <section id="izy">
+            <article>
+                <h3>Onde estamos?</h3>
+                <p>R. Gustav Willi Borghoff, 378 - Parque Industrial Tomas Edson, São Paulo - SP, 01144-080</p>
+            </article>
+            <article>
+                <h3>Contato</h3>
+                <p>CATAKI@PIMPMYCARROCA.COM</p>
+            </article>
+            <article>Redes Sociais</article>
+
+        </section>
+        <p>&copy; Cataki - Todos os direitos reservados</p>
     </footer>
 </body>
 
