Estilização quase completa area educativa

--- a/direito-catadores.html
+++ b/direito-catadores.html
@@ -63,7 +63,7 @@
             <article class="direitos">
                 <div class="dt">
                     <img src="assets/catador.png" alt="Imagem de um catador" width="150px" height="150px">
-                    <h4>Como a sociedade pode contribuir?</h4>
+                    <h4>Como a sociedade pode <span>contribuir?</span></h4>
                 </div>
                 <ul>
                     <li>Respeito</li>
