--- a/escolas.html
+++ b/escolas.html
@@ -27,22 +27,23 @@
                 consumo.</p>
         </section>
         <section id="videos">
-                <article class="videocard">
-                    <video src="assets/O que é ser catador_.mp4" type="mp4" controls width="500px"></video>
-                    <p>O que é ser catador?</p>
-                </article>
-                <article class="videocard">
-                    <video src="assets/Por que reciclamos e quem lucra com isso_.mp4" controls type="mp4" width="500px"></video>
-                    <p>Por que reciclamos <br> e quem lucra com isso?</p>
-                </article>
-                <article class="videocard">
-                    <video src="assets/Consumo, lixo e desigualdade.mp4" type="mp4" controls width="500px"></video>
-                    <p>Consumo, lixo e desigualdade</p>
-                </article>
+            <article class="videocard">
+                <video src="assets/O que é ser catador_.mp4" type="mp4" controls width="500px"></video>
+                <p>O que é ser catador?</p>
+            </article>
+            <article class="videocard">
+                <video src="assets/Por que reciclamos e quem lucra com isso_.mp4" controls type="mp4"
+                    width="500px"></video>
+                <p>Por que reciclamos <br> e quem lucra com isso?</p>
+            </article>
+            <article class="videocard">
+                <video src="assets/Consumo, lixo e desigualdade.mp4" type="mp4" controls width="500px"></video>
+                <p>Consumo, lixo e desigualdade</p>
+            </article>
         </section>
         <section id="cartilhas">
             <div class="materiais">
-                <h3>Reflexões para a sala de aula</h3>
+                <span><h3>Reflexões para a sala de aula</h3></span>
                 <ul>
                     <li>Por que o trabalho dos catadores <br>não é valorizado?</li>
                     <li>Quem produz mais lixo e quem <br>paga o preço?</li>
@@ -50,11 +51,13 @@
                     <li>Crie um cartaz critico sobre esse assunto</li>
                 </ul>
             </div>
-            <div class="materiais">
+            <div class="materiais-2">
                 <h3>Materiais Complementares</h3>
                 <a href="">
                     <p>Cartilhas Pedagógicas</p>
                 </a>
+
+
                 <a href="">
                     <p>Dados sobre os catadores</p>
                 </a>
@@ -79,6 +82,21 @@
             </ul>
         </section>
     </main>
+    <footer>
+        <section id="izy">
+            <article>
+                <h3>Onde estamos?</h3>
+                <p>R. Gustav Willi Borghoff, 378 - Parque Industrial Tomas Edson, São Paulo - SP, 01144-080</p>
+            </article>
+            <article>
+                <h3>Contato</h3>
+                <p>CATAKI@PIMPMYCARROCA.COM</p>
+            </article>
+            <article>Redes Sociais</article>
+
+        </section>
+        <p>&copy; Cataki - Todos os direitos reservados</p>
+    </footer>
     <footer>
         <p>&copy; Site acadêmico desenvolvido por alunos do Instituto da Oportunidade Social – Projeto TCC.</p>
     </footer>
