--- a/remuneracao.html
+++ b/remuneracao.html
@@ -31,17 +31,17 @@
             <article class="info-impacto">
                 <img src="assets/sinal-de-reciclagem.png" alt="" width="80px">
                 <p>Mais de 800 mil <br>catadores atuam informalmente <br>no Brasil.</p>
-        
+
                 <img src="assets/lixeira-de-reciclagem.png" alt="" width="80px">
                 <p>Eles reduzem drastícamente o <br>volume de lixo em aterros e <br>ruas.</p>
-    
+
                 <img src="assets/bolsa-de-dinheiro.png" alt="" width="80px">
                 <p>Geram renda com mateirais <br>que seriam descartados.</p>
             </article>
             <article class="info-impacto">
                 <video controls width="900px">
-                <source src="assets/Por que Remunerar os Catadores_.mp4" type="video/mp4">
-                Seu navegador não suporta vídeo HTML5.
+                    <source src="assets/Por que Remunerar os Catadores_.mp4" type="video/mp4">
+                    Seu navegador não suporta vídeo HTML5.
                 </video>
             </article>
         </section>
@@ -57,7 +57,19 @@
         </section>
     </main>
     <footer>
-        <p>&copy; Site acadêmico desenvolvido por alunos do Instituto da Oportunidade Social – Projeto TCC.</p>
+        <section id="izy">
+            <article>
+                <h3>Onde estamos?</h3>
+                <p>R. Gustav Willi Borghoff, 378 - Parque Industrial Tomas Edson, São Paulo - SP, 01144-080</p>
+            </article>
+            <article>
+                <h3>Contato</h3>
+                <p>CATAKI@PIMPMYCARROCA.COM</p>
+            </article>
+            <article>Redes Sociais</article>
+
+        </section>
+        <p>&copy; Cataki - Todos os direitos reservados</p>
     </footer>
 </body>
 
